--- a/apresentacao.html
+++ b/apresentacao.html
@@ -14,7 +14,7 @@
 	<p>CASO VOCÊ TENHA CAIDO AQUI DE PARAQUEDAS, NÃO SE DESESPERE!</p>
 	<p>APERTE O PLAY PARA QUE EU TE EXPLIQUE SOBRE O QUE SE TRATA ESSA NARATIVA DIGIAL.</p>
 	<div class="audio">
-			<audio controls>
+			<audio controls autoplay="false">
  				<source src="img/audio1.mp3" type="audio/mpeg">
  				 Your browser does not support the audio element.
 			</audio>
