--- a/pensador.html
+++ b/pensador.html
@@ -20,7 +20,7 @@
 <p>CASO VOCÊ QUERIRA SABER UM POUCO MAIS SOBRE, RECOMENDO A LEITURA DO LIVRO. PARA AJUDAR VOCÊ A DECIDIR SE FARÁ A LEITURA, ENCONTREI ESSE RESUMO NA INTERNET. CLIQUE NO PLAY PARA OUVIR, SE TIVER INTERESSE. CLIQUE NOS TRÊS PONTINHOS PARA AUMENTAR A VELOCIDADE.</p>
 
 <div class="audio">
-			<audio controls>
+			<audio controls autoplay="false">
  				<source src="img/livro.mp3" type="audio/mpeg">
  				 Your browser does not support the audio element.
 			</audio>
