--- a/pensador.html
+++ b/pensador.html
@@ -29,7 +29,7 @@
 <p>ENCONTREI ESSA RESENHA TAMBÉM:</p>
 
 <object data="img/resenha.pdf" type="application/pdf" class="obj" style="width: 80vw; height: 50vw; margin: 10vh auto; display: flex; justify-content: space-around;">
-    		<p>Seu navegador não tem um plugin pra PDF</p>
+    		<p>Seu navegador não tem um plugin pra PDF <a href="https://portalrevistas.ucb.br/index.php/raead/article/download/3240/2235" style="text-decoration: none;">clique aqui para fazer o download</a></p>
 		</object>
 
 <p style="text-align: center;"><a href="bastidor3.html" style="text-decoration: none;">👉 CONTINUAR 👈</a></p>
