--- a/escola.html
+++ b/escola.html
@@ -32,7 +32,7 @@
 <p>ISSO ME FEZ LEMBRAR DE UMA SITUAÇÃO BEM ALEATÓRIA QUE ACONTECEU COMIGO EM UMA AULA DE PORTUGUÊS. CLICA NO PLAY PARA EU TE CONTAR, CASO QUEIRA SABER.</p>
 
 <div class="audio">
-	<audio controls class="audio1">
+	<audio controls muted>
 			<source src="img/relato.ogg" type="audio/mpeg">
 			 Your browser does not support the audio element.
 	</audio>
