--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="pt">
 <link rel="shortcut icon" href="img/gabriel.ico">
-<script type="text/javascript">alert("NARRATIVA DIGITAL ELABORADA POR GABRIEL LISBOA DE MELO. \n \nPARA QUE VOCÊ TENHA UMA BOA EXPERIÊNCIA, ACESSE PELO COMPUTADOR (E NÃO PELO CELULAR). UTILIZE O NAVEGADOR GOOGLE CHROME. \n \n ANOTE AS SENSAÇÕES E SENTIMENTOS QUE ATRAVESSAREM VOCÊ EM CADA PÁGINA E NOS CONTE NO FINAL. \n \n ALGUNS PROBLEMAS TÉCNCOS ESTÃO ACIONANDO O SOM AUTOMATICAMENTE. RECOMENDO UTILIZAR UM FONE.");</script>
+<script type="text/javascript">alert("NARRATIVA DIGITAL ELABORADA POR GABRIEL LISBOA DE MELO. \n \nPARA QUE VOCÊ TENHA UMA BOA EXPERIÊNCIA, ACESSE PELO COMPUTADOR (E NÃO PELO CELULAR). UTILIZE O NAVEGADOR GOOGLE CHROME. \n \n ANOTE AS SENSAÇÕES E SENTIMENTOS QUE ATRAVESSAREM VOCÊ EM CADA PÁGINA E NOS CONTE NO FINAL.");</script>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
